--- a/client/stylesheets/style.less
+++ b/client/stylesheets/style.less
@@ -14,6 +14,7 @@ body {
 .media {
     width:57rem;
     margin: auto;
+    cursor: pointer;
 }
 
 #main {
@@ -38,4 +39,27 @@ body {
     text-align: center; 
     color: gray;
     margin-top: @dropzoneHeight/2 - 1.5rem;
+}
+
+.uploadsList p, .uploadsList h4
+{
+    margin-bottom: 5px;
+    vertical-align: bottom;
+}
+pre
+{
+    font-size: 10px;
+}
+.collectionArea
+{
+    margin: 20px 0px;
+}
+.media pre:hover 
+{
+    background: #868686;
+}
+
+.selected pre
+{
+    background: #868686;
 }
