--- a/client/views/navbar/navbar.html
+++ b/client/views/navbar/navbar.html
@@ -5,13 +5,9 @@
 
             <!-- mobile collapse -->
 			<div class="navbar-header">
-				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#links">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand active" href="{{pathFor 'home'}}">CMS</a>
+				<a class="navbar-brand active" href="{{pathFor 'home'}}">Home</a>
+				<a class="navbar-brand" href="{{pathFor 'schemaupload'}}">Schema Upload</a>
+				<a class="navbar-brand" href="{{pathFor 'schemaList'}}">Collections</a>				
 			</div>
 
             <!-- nav links -->
